--- a/pagina_inicio/css/estilos.css
+++ b/pagina_inicio/css/estilos.css
@@ -3,14 +3,8 @@ body {
     color: #fff;
 }
 
-header {
+.row-head {
     background: #d6d6d6;
-    padding: 20px;
-    margin-bottom: 20px;
-}
-
-img {
-    border: -5px;
 }
 
 h2 {
@@ -18,123 +12,46 @@ h2 {
     font-family: michroma;
 }
 
-h3 {
+.sign {
     color: #0019fd;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: large;
-    text-align: right;
 }
 
-h4 {
-    color: #0019fd;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
-    font-size: large;
-    text-align: left;
+.dropdown-toggle::after {
+    display: none;
 }
 
-.portada {
-    border-radius: 25px;
-    margin-bottom: 50px;
-    height: 400px;
+#menuIcon {
+    color: #0019fd;
+    margin-left: -30px;
+}
+
+.dropdown-header {
+    color: #b00808;
+    font-family: michroma;
+}
+
+.btn-in {
+    color: #0019fd;
 }
 
 .sede {
+    font-family: Arial, Helvetica, sans-serif;
     color: #000;
-    text-align: center;
-    margin-bottom: 30px;
-    font-weight: 650;
-    
+    font-size: 18px;
 }
 
-.ciudad {
-    color: #000;
-    text-align: center;
-    margin-bottom: 30px;
-    font-size: small;
+.btn-torey {
+    background: #fff;
 }
-
-.lista {
-    color: #000;
-    text-align: center;
-    margin-bottom: 30px;
-}
-
 
 .titulo {
     color: #000;
-    margin-top: 30px;
-    margin-bottom: 20px;
-    font-weight: 650;
-    text-align: center;
 }
 
-.imagen1 {
-    border-radius: 10px;
-    margin-bottom: 50px;
-    margin-top: 20px;
-}
-
-.bt {
-    width: 300px;
-    height: 30px;
-    margin-top: 30px;
-    border-radius: 20px;
-    background: #fa4343;
-}
-
-.imagen2 {
-    margin-top: 30px;
-}
-
-
-.titulo2 {
-    color: #000;
-    margin-top: 30px;
-    margin-bottom: 20px;
-    font-weight: 650;
-    text-align: center;
-}
-
-.imagen3 {
-    border-radius: 10px;
-    margin-bottom: 50px;
-    margin-top: 20px;
-}
-
-.contenedor {
-    margin-bottom: 20px;
+.img {
+    margin-inline: -40px;
 }
 
 footer {
     background: #1e1e1e;
-    
 }
-
-.name1 {
-    color: #b00808;
-    font-family: michroma;
-    font-size: xx-large;
-    text-align: right;
-    margin: -60px;
-}
-
-.name {
-    color: #b00808;
-    font-family: michroma;
-    font-size: xx-large;
-}
-
-.social {
-    text-align: center;
-}
-
-.widgets {
-    color: #fff;
-    margin-top: 50px;
-    margin-bottom: 100px;
-}
-
-.p1 {
-    margin-top: 5;
-}
-
